# comp6991-ass2

./: .gitignore
iris/: mark_request.txt
iris/common/: Cargo.toml
iris/common/src/: connect.rs  irc_client.rs  lib.rs  plugin.rs  types.rs
iris/iris/: Cargo.toml
iris/iris/src/: main.rs  message_handler.rs  plugin_handler.rs  user_connections.rs
iris/iris/src/lib/: message_handler.rs  mod.rs  types.rs  user_connections.rs
iris/plugins/example/: Cargo.toml
iris/plugins/example/src/: lib.rs
iris/plugins/reminder/: Cargo.toml
iris/plugins/reminder/src/: lib.rs
