[package]
name = "iris"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iris"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bufstream = "0.1.4"
clap = { version = "4.0.18", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"
common = {path = "../common"}
abi_stable = "0.10.0"
closure = "0.3.0"
